@@ -58,6 +58,14 @@ Some things, in no specific order, that I'd like to fix:
 		[ ]  Start thinking about the plugin framework, use sdl
 		     for video output!
 
+  [/]	The testmips machine.
+
+	[X]  Implement basic MIPS instruction execution, enough to run
+	     the rectangle drawing demo.
+	[ ]  Function call trace for MIPS instructions.
+	[ ]  Try both 64-bit and 32-bit MIPS cpus, and both 32-bit and
+	     16-bit instruction encodings!
+
   [ ]	Improve CTRL-C behavior! Abort quicker.
 
   [ ]	BUG: Turning on showTraceTree AFTER starting (without -V) doesn't
