@@ -4474,4 +4474,6 @@ Changelog for GXemul:
 		Beginning on reimplementing MIPS (slow) loads/stores,
 		and reimplementing the MIPS addu, subu, srl, xor, multu,
 		mfhi, mflo, mthi, and mtlo instructions.
-20100207	Reimplementing the MIPS slt and sltu instructions.
+20100207	Reimplementing the MIPS slt and sltu instructions, various
+		branch instructions, and fixing some bugs; the rectangle
+		drawing demo for testmips runs in the new framework :)
